# guandan

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml  security.yml
apps/admin-panel/: package.json  tsconfig.json
apps/admin-panel/app/: layout.tsx  page.tsx
apps/ai-service/: Dockerfile  pyproject.toml
apps/ai-service/app/: main.py
apps/game-server/: Dockerfile  package.json  tsconfig.json  vitest.config.ts
apps/game-server/prisma/: schema.prisma  seed.ts
apps/game-server/scripts/: smoke-bots.mjs  smoke.mjs
apps/game-server/src/: app.module.ts  main.ts  (+2 more)
apps/teams-bot/: package.json
apps/teams-tab/: Dockerfile  next.config.mjs  package.json  tsconfig.json
docs/: 00-overview.md  01-architecture.md  02-rules-engine.md  03-socket-protocol.md  04-frontend.md  05-ai-bot.md  06-database.md  07-devops.md  08-qa.md  08-testing.md  09-master-orchestrator.md  10-conventions.md  11-appsource-submission.md  prompts.md
infrastructure/: README.md
infrastructure/bicep/: main.bicep
infrastructure/docker/: loki-config.yml  nginx.conf  otel-collector.yml  prometheus.yml
infrastructure/k8s/: 00-namespace.yaml  10-config.yaml  20-game-server.yaml  21-teams-tab-and-ai.yaml  30-stateful.yaml  40-ingress.yaml  README.md
infrastructure/terraform/: main.tf
tests/e2e/: smoke.spec.ts
tests/load/: socket-load.mjs
tests/mock/: teams-graph.mjs
(+114 files in other folders)
